--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Simple model validation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/svedjebratt/model-validation"
+    "url": "https://github.com/svedjebratt/model-validator"
   },
   "keywords": [
     "form",
@@ -17,7 +17,10 @@
   "author": "Magnus",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/svedjebratt/model-validation/issues"
+    "url": "https://github.com/svedjebratt/model-validator/issues"
   },
-  "homepage": "https://github.com/svedjebratt/model-validation"
+  "homepage": "https://github.com/svedjebratt/model-validator",
+  "devDependencies": {
+    "jest-cli": "^0.4.15"
+  }
 }
