--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "prepublish": "./node_modules/.bin/babel src --out-dir dist",
+    "prepublish": "rm -fR dist/* && ./node_modules/.bin/babel src --out-dir dist && cp src/index.d.ts dist/.",
     "compile-watch": "./node_modules/.bin/babel src --watch --out-dir dist"
   },
   "typings": "dist/index",
